--- a/Restaurant/Ad/templates/Ad/Admin.html
+++ b/Restaurant/Ad/templates/Ad/Admin.html
@@ -33,7 +33,8 @@
                 <h2 class=text-center>{{stories}}</h2>
             </div>
             <div class="col-sm mr-4 mb-4" id="C1R4">
-                <h1 class="text-center"><a href="/Ad/ad_order">Order</a></h1>
+                <h1 class="text-center"><a href="/Ad/ad_order">Order</a></h1>              
+                <h2 class=text-center>{{order}}</h2>
             </div>
         </div>
     </div>
@@ -48,7 +49,8 @@
                 <h2 class=text-center>{{catering}}</h2>
             </div>
             <div class="col-sm mr-4 mb-4" id="C2R3">
-                <h1 class="text-center"><a href="/Ad/message">Message</a></h1>
+                <h1 class="text-center"><a href="/Ad/message">Message</a></h1>              
+                <h2 class=text-center>{{message}}</h2>
             </div>
             <div class="col-sm mr-4 mb-4" id="C2R4">
                 <h1 class="text-center"><a href="/Ad/user">User</a></h1>
