--- a/Restaurant/Ad/templates/Ad/AdReservation.html
+++ b/Restaurant/Ad/templates/Ad/AdReservation.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 {% block title_link %}
-    <title>NamasteDaju Restaurant Gallery</title>
+    <title>NamasteDaju Restaurant Reservation</title>
 {% endblock %}
 
 {% block css_link %}
@@ -35,6 +35,7 @@
             <table class="table table-striped" id="Images">
                 <thead class="thead-dark">
                     <tr>
+                        <th>Username</th>
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Email</th>
@@ -49,7 +50,8 @@
                 <tbody>
                     {% for i in key %}
                     {% if i.completion == False %}
-                    <tr  class="table-warning">                        
+                    <tr  class="table-warning"> 
+                        <td>{{i.username}}</td>
                         <td>{{i.firstname}}</td>
                         <td>{{i.lastname}}</td>
                         <td>{{i.email}}</td>
@@ -72,6 +74,7 @@
             <table class="table table-striped" id="Images">
                 <thead class="thead-dark">
                     <tr>
+                        <th>Username</th>
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Email</th>
@@ -87,6 +90,7 @@
                     {% for i in key %}
                     {% if i.completion == True %}
                     <tr class="table-success">
+                        <td>{{i.username}}</td>
                         <td>{{i.firstname}}</td>
                         <td>{{i.lastname}}</td>
                         <td>{{i.email}}</td>
