--- a/Restaurant/Ad/templates/Ad/Message.html
+++ b/Restaurant/Ad/templates/Ad/Message.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 {% block title_link %}
-    <title>NamasteDaju Restaurant Gallery</title>
+    <title>NamasteDaju Restaurant Message</title>
 {% endblock %}
 
 {% block css_link %}
@@ -15,35 +15,43 @@
 
 {% block content %}
     {% include 'AdNavbar.html' %}
-    <div class="container-fluid d-flex flex-column px-0" id="AdCatering">
+    <div class="container-fluid d-flex flex-column px-0" id="AdMessage">
         <div class="container-fluid d-flex justify-content-center pb-sm-5" id="AMH">
           <h1>Messages From Users</h1>
-        </div>     
+        </div>                
+        <div class="container d-flex justify-content-center py-5" id="Search">
+            <div class="card p-4" id="Card">
+                <form class="form" method="GET">
+                    {{message_filter.form}}
+                    <div class="d-flex justify-content-center py-2">
+                        <button type="submit" class="btn px-4 py-1 mr-2">Search</button>
+                        <a href="/Ad/ad_order" type="button"  class="btn px-4 py-1" id="UB">Show All</a>
+                    </div>
+                </form>
+            </div>
+        </div>
         <div class="table-responsive" id="Table">
             <table class="table table-striped" id="Images">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Name</th>
-                        <th>Email</th>
+                        <th>Username</th>
                         <th>Subject</th>
                         <th>messages</th>
                         <th>Messaged Date</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for i in key %}
-                    {% if i.completion == False %}
                     <tr>                        
-                        <td>{{i.name}}</td>
-                        <td>{{i.email}}</td>
+                        <td>{{i.username}}</td>
                         <td>{{i.subject}}</td>
                         <td>{{i.messages}}</td>
                         <td>{{i.messaged_date}}</td>
                         <td>
-                            <a href="/Nd/deletemessage/{{i.id}}" class="btn btn-danger mr-4">Delete</a>
+                            <a href="/Ad/deletemessage/{{i.id}}" class="btn btn-danger mr-4">Delete</a>
                         </td>                        
                     </tr>
-                    {% endif %}
                     {% endfor %}
                 </tbody>
             </table>
