--- a/Restaurant/static/css/Menu.css
+++ b/Restaurant/static/css/Menu.css
@@ -111,7 +111,7 @@
 #Form
 {
     position: fixed;
-    top:150px;
+    top:180px;
     z-index: 2000;
 }
 #Form h1
@@ -155,6 +155,14 @@
     color: rgb(0, 0, 187);
     background-color: transparent;
     border: 2px solid rgb(0, 0, 187);
+}
+.help-block, .success_message
+{
+    color: rgb(0, 187, 40);
+}
+.error_message, .help-block
+{
+    color: red;
 }
 #Breakfast .card
 {
