--- a/Restaurant/Ad/templates/Ad/AdStories.html
+++ b/Restaurant/Ad/templates/Ad/AdStories.html
@@ -71,7 +71,7 @@
                             <td>{{i.name}}</td>
                             <td><img src="/{{i.image}}"/></td>
                             <td>{{i.uploaded_date}}</td>
-                            <td class="tdd">{{i.detail}}</td>
+                            <td>{{i.detail}}</td>
                             <td>
                                 <a href="/Ad/updatestory/{{i.id}}" class="btn btn-warning mr-4">Edit</a>
                                 <a href="/Ad/deletestory/{{i.id}}" class="btn btn-danger" onclick="return confirm('Are you sure want to delete this story?')">Delete</a>
