--- a/Restaurant/Ad/templates/Ad/Message.html
+++ b/Restaurant/Ad/templates/Ad/Message.html
@@ -36,7 +36,7 @@
                     <tr>
                         <th>Username</th>
                         <th>Subject</th>
-                        <th>messages</th>
+                        <th class="text-center">messages</th>
                         <th>Messaged Date</th>
                         <th>Action</th>
                     </tr>
@@ -46,7 +46,7 @@
                     <tr>                        
                         <td>{{i.username}}</td>
                         <td>{{i.subject}}</td>
-                        <td>{{i.messages}}</td>
+                        <td class=".tdd">{{i.messages}}</td>
                         <td>{{i.messaged_date}}</td>
                         <td>
                             <a href="/Ad/deletemessage/{{i.id}}" class="btn btn-danger mr-4">Delete</a>
