--- a/Restaurant/static/css/Navbar.css
+++ b/Restaurant/static/css/Navbar.css
@@ -84,7 +84,10 @@
 {
     font-size: 20px;
     color: rgb(0, 0, 187);
-    text-decoration: none;
+}
+.underlined
+{
+    text-decoration: underline;
 }
 .user_name:hover
 {
