--- a/Restaurant/static/css/Profile.css
+++ b/Restaurant/static/css/Profile.css
@@ -177,7 +177,7 @@
     border-radius: 10px;
     box-shadow: 0px 5px 20px purple;
 }
-#Message
+#UserMessage
 {
     border-radius: 10px;
     box-shadow: 0px 5px 20px red;
