--- a/Restaurant/Ad/templates/Ad/Admin.html
+++ b/Restaurant/Ad/templates/Ad/Admin.html
@@ -13,7 +13,8 @@
 {% block content %}
 <div class="container-fluid d-lg-flex flex-column" id="Container">
     <div class="container-fluid d-flex justify-content-end">
-        <a class="btn px-3 py-2" href="/Ac/logout" id="Logout">Logout</a>
+        <a class="btn px-3 py-2 mr-3" href="/Ad/ad_register" id="Register">Register New user</a>
+        <a class="btn px-3 py-2 mr-3" href="/Ac/logout" id="Logout">Logout</a>
     </div>
     <div class="container d-flex justify-content-center" id="CH">
         <h1 class="px-5 py-2">NamasteDaju Restaurant Dashboard</h1>
