--- a/Restaurant/Nd/templates/Nd/Menu.html
+++ b/Restaurant/Nd/templates/Nd/Menu.html
@@ -68,33 +68,12 @@
                 <form class="form" method="GET">
                     {{menu_filter.form}}
                     <div class="d-flex justify-content-center py-2">
-                        <button type="submit" class="btn px-4 py-1">Search</button>
+                        <button type="submit" class="btn px-4 py-1 mr-3">Search</button>
+                        <a href="/menu" type="button"  class="btn px-4 py-1" id="AMB">Show All</a>
                     </div>
                 </form>
             </div>
-        </div>     
-        {% for message in messages %}
-            {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-            <h4 class="success_message py-3 px-1 my-2 text-center">{{message}}</h4>
-            {% endif %}
-            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-            <h4 class="error_message py-3 px-1 my-2 text-center">{{message}}</h4>
-            {% endif %}
-        {% endfor %} 
-        <div class="container pb-5" id="Form">
-            <div class="card py-4" id="Card">
-                <h1 class="text-center">Order Form</h1>
-                <span class="fa fa-times" onclick="hide()" id="Cs"></span>
-                <form class="form" method="POST">
-                    {% csrf_token %}
-                    {{form | bootstrap_horizontal}}
-                    <div class="d-flex justify-content-center py-2">
-                        <button type="submit" class="btn px-4 py-1">Order Food</button>
-                    </div>
-                    <small id="Note" class="form-text font-weight-bold text-center">Note: This service is available in Kathmandu City Only</small>
-                </form>
-            </div>
-        </div>
+        </div>   
         <div class="container-fluid d-lg-flex flex-row justify-content-between mb-5">
             <div class="container mb-5" id="Breakfast">
                 <div class="card d-flex flex-column justify-content-between py-4">
@@ -112,7 +91,8 @@
                             <div class="container d-flex flex-column" id="Detail">
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
-                                <h4 class="Dh4">Rs.{{i.price}} <a class="btn font-weight-bold mt-2 Da" onclick='show("{{i.name}}")'>Order Now</a></h4>
+                                <h4 class="Dh4">Rs.{{i.price}}</h4>
+                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
                             </div>
                         </div>
                         {% endif %}
@@ -136,7 +116,8 @@
                             <div class="container d-flex flex-column" id="Detail">
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
-                                <h4 class="Dh4">Rs.{{i.price}} <a class="btn font-weight-bold mt-2 Da" onclick='show("{{i.name}}")'>Order Now</a></h4>
+                                <h4 class="Dh4">Rs.{{i.price}}</h4>
+                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
                             </div>
                         </div>
                         {% endif %}
@@ -160,7 +141,8 @@
                             <div class="container d-flex flex-column" id="Detail">
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
-                                <h4 class="Dh4">Rs.{{i.price}} <a class="btn font-weight-bold mt-2 Da" onclick='show("{{i.name}}")'>Order Now</a></h4>
+                                <h4 class="Dh4">Rs.{{i.price}}</h4>
+                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
                             </div>
                         </div>
                         {% endif %}
@@ -186,7 +168,8 @@
                             <div class="container d-flex flex-column" id="Detail">
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
-                                <h4 class="Dh4">Rs.{{i.price}} <a class="btn font-weight-bold mt-2 Da" onclick='show("{{i.name}}")'>Order Now</a></h4>
+                                <h4 class="Dh4">Rs.{{i.price}}</h4>
+                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
                             </div>
                         </div>
                         {% endif %}
@@ -210,7 +193,8 @@
                             <div class="container d-flex flex-column" id="Detail">
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
-                                <h4 class="Dh4">Rs.{{i.price}} <a class="btn font-weight-bold mt-2 Da" onclick='show("{{i.name}}")'>Order Now</a></h4>
+                                <h4 class="Dh4">Rs.{{i.price}}</h4>
+                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
                             </div>
                         </div>
                         {% endif %}
@@ -234,7 +218,8 @@
                             <div class="container d-flex flex-column" id="Detail">
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
-                                <h4 class="Dh4">Rs.{{i.price}} <a class="btn font-weight-bold mt-2 Da" onclick='show("{{i.name}}")'>Order Now</a></h4>
+                                <h4 class="Dh4">Rs.{{i.price}}</h4>
+                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
                             </div>
                         </div>
                         {% endif %}
