All Done For NamasteDaju Restaurant

--- a/Restaurant/Nd/templates/Nd/Menu.html
+++ b/Restaurant/Nd/templates/Nd/Menu.html
@@ -92,7 +92,10 @@
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
                                 <h4 class="Dh4">Rs.{{i.price}}</h4>
-                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
+                                <div class="row">
+                                    <a class="col-5 btn font-weight-bold mt-2 ml-1 mr-3 Da" href="/order/{{i.id}}" onclick="food('{{i.name}}')">Order Now</a>
+                                    <a class="col-5 btn font-weight-bold mt-2 Da" href="/ad_to_cart/{{i.id}}" >Add to Cart</a>
+                                </div>
                             </div>
                         </div>
                         {% endif %}
@@ -117,7 +120,10 @@
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
                                 <h4 class="Dh4">Rs.{{i.price}}</h4>
-                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
+                                <div class="row">
+                                    <a class="col-5 btn font-weight-bold mt-2 ml-1 mr-3 Da" href="/order/{{i.id}}" onclick="food('{{i.name}}')">Order Now</a>
+                                    <a class="col-5 btn font-weight-bold mt-2 Da" href="/ad_to_cart/{{i.id}}" >Add to Cart</a>
+                                </div>
                             </div>
                         </div>
                         {% endif %}
@@ -142,7 +148,10 @@
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
                                 <h4 class="Dh4">Rs.{{i.price}}</h4>
-                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
+                                <div class="row">
+                                    <a class="col-5 btn font-weight-bold mt-2 ml-1 mr-3 Da" href="/order/{{i.id}}" onclick="food('{{i.name}}')">Order Now</a>
+                                    <a class="col-5 btn font-weight-bold mt-2 Da" href="/ad_to_cart/{{i.id}}" >Add to Cart</a>
+                                </div>
                             </div>
                         </div>
                         {% endif %}
@@ -169,7 +178,10 @@
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
                                 <h4 class="Dh4">Rs.{{i.price}}</h4>
-                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
+                                <div class="row">
+                                    <a class="col-5 btn font-weight-bold mt-2 ml-1 mr-3 Da" href="/order/{{i.id}}" onclick="food('{{i.name}}')">Order Now</a>
+                                    <a class="col-5 btn font-weight-bold mt-2 Da" href="/ad_to_cart/{{i.id}}" >Add to Cart</a>
+                                </div>
                             </div>
                         </div>
                         {% endif %}
@@ -194,7 +206,10 @@
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
                                 <h4 class="Dh4">Rs.{{i.price}}</h4>
-                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
+                                <div class="row">
+                                    <a class="col-5 btn font-weight-bold mt-2 ml-1 mr-3 Da" href="/order/{{i.id}}" onclick="food('{{i.name}}')">Order Now</a>
+                                    <a class="col-5 btn font-weight-bold mt-2 Da" href="/ad_to_cart/{{i.id}}" >Add to Cart</a>
+                                </div>
                             </div>
                         </div>
                         {% endif %}
@@ -219,7 +234,10 @@
                                 <h3 class="Dh3">{{i.name}}</h3>
                                 <p  class="Dp">{{i.description}}</p>
                                 <h4 class="Dh4">Rs.{{i.price}}</h4>
-                                <a class="btn font-weight-bold mt-2 Da" href="/order" onclick="food('{{i.name}}')">Order Now</a>
+                                <div class="row">
+                                    <a class="col-5 btn font-weight-bold mt-2 ml-1 mr-3 Da" href="/order/{{i.id}}" onclick="food('{{i.name}}')">Order Now</a>
+                                    <a class="col-5 btn font-weight-bold mt-2 Da" href="/ad_to_cart/{{i.id}}" >Add to Cart</a>
+                                </div>
                             </div>
                         </div>
                         {% endif %}
