--- a/Restaurant/templates/Navbar.html
+++ b/Restaurant/templates/Navbar.html
@@ -37,8 +37,9 @@
     </div>
     <div class="d-flex flex-row py-3 mr-sm-3" id="Buttons">
       {% if user.is_authenticated %}
-      <img class="img-fluid profile" src="{{request.user.profile.profile_pic.url}}"/>
-      <a class="font-weight-bold mx-3 user_name {{underlined}}" href="/Ac/profile" id="Username">{{request.user.profile.username}}</a>
+      <img class="img-fluid profile mr-3" src="{{request.user.profile.profile_pic.url}}"/>
+      <a class="font-weight-bold mr-3 user_name {{underlined}}" href="/Ac/profile" id="Username">{{request.user.profile.username}}</a>
+      <a class="fas fa-cart-plus mr-3 ct {{CircleCart}}" href="/cart"></a>
       <a class="btn font-weight-bold px-3 lgo" href="/Ac/logout">Logout</a>
       {% else %}
       <a href="/Ac" class="btn font-weight-bold px-3 lgi">Login</a>
