--- a/Restaurant/Nd/templates/Nd/Cart.html
+++ b/Restaurant/Nd/templates/Nd/Cart.html
@@ -2,12 +2,14 @@
 
 {% load static %}
 
+{% load bootstrap %}
+
 {% block title_link %}
-    <title>NamasteDaju Restaurant Stories</title>
+    <title>NamasteDaju Restaurant Cart</title>
 {% endblock %}
 
 {% block css_link %}
-    <link href="{% static 'css/Stories.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/Cart.css' %}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 
 {% block content %}
@@ -50,49 +52,58 @@
         </div>
         <div class="container-fluid d-flex flex-column justify-content-center" id="HM">
             <div class="container d-flex justify-content-center">
-                <h1>Stories</h1>
+                <h1>Cart</h1>
             </div>
             <div class="container d-flex justify-content-center">
-                <h5><a href="/">Home <span class="fa fa-chevron-right"></span> </a> Stories <span class="fa fa-chevron-right"></span></h5>
+                <h5><a href="/">Home <span class="fa fa-chevron-right"></span> </a> Cart <span class="fa fa-chevron-right"></span></h5>
             </div>
         </div>
     </div>
-    <div class="container-fluid d-flex flex-column py-5" id="Stories">
-        <div class="container d-flex justify-content-center pt-5" id="SH">
-          <h1>Read Our Daily Stories</h1>
-        </div>    
-        <div class="container d-flex justify-content-center pb-5" id="Search">
+
+    <div class="container-fluid pt-5" id="Cart"> 
+       <div class="container">
             <div class="card p-4" id="Card">
-                <form class="form" method="GET">
-                    {{stories_filter.form}}
-                    <div class="d-flex justify-content-center py-2">
-                        <button type="submit" class="btn px-4 py-1">Search</button>
+                {% for message in messages %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                    <h4 class="success_message py-3 px-1 my-2 text-center">{{message}}</h4>
+                    {% endif %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                    <h4 class="error_message py-3 px-1 my-2 text-center">{{message}}</h4>
+                    {% endif %}
+                {% endfor %}
+                <form class="form" method="POST">
+                    {% csrf_token %}
+                    {{form | bootstrap_horizontal}}
+                    <div class="d-flex justify-content-center py-2 mb-3">
+                        <button type="submit" class="btn px-4 py-1">Continue Order</button>
                     </div>
                 </form>
             </div>
-        </div>    
-        <div class="container-fluid" id="Sc">
-            <div class="row d-flex justify-content-center mb-5">
+       </div>
+    </div>
+
+    <div class="container-fluid py-5" id="CDetails">
+        <div class="container">      
+            <h1 class="text-center mb-4" id="CDh1">Your Carts Detail</h1>      
+            <div class="row d-flex justify-content-center">
                 {% for i in key %}
-                <div class="col-5 d-flex flex-column mb-4 mr-5">
-                    <div>
-                        <img class="img-fluid" src='/{{i.image}}'/>
+                {% if i.username == request.user %}
+                <div class="col-lg-3 mb-5">
+                    <div class="container d-flex justify-content-center">                        
+                        <img class="img-fluid mb-2" src="/{{i.foodname.image}}" alt="pic"/>
                     </div>
-                    <div class="d-flex flex-column detail">
-                        <h2 class="mt-2 Sh2">{{i.name}}</h2>
-                        <h4  class="mt-2 Sh4"><span class="fa fa-calendar-alt mr-2"></span>{{i.uploaded_date}}</h4>
-                        <p class="mt-2 Sp">{{i.detail}}</p>
-                        <button class="btn font-weight-bold my-2 Sb1" onclick="more(this)">Read More</button>
-                        <button class="btn font-weight-bold my-2 Sb2" onclick="less(this)">Read Less</button>
-                    </div>
+                    <h3 class="text-center CD">{{i.foodname}}</h3>
+                    <div class="container d-flex justify-content-center">   
+                        <a class="btn btn-primary font-weight-bold mt-2 Da" href="/delete_cart/{{i.id}}">Remove</a>
+                    </div> 
                 </div>
+                {% endif %}
                 {% endfor %}
             </div>
         </div>
     </div>
-
 {% endblock %}
 
 {% block script_link %}
-        <script src="{% static 'js/Stories.js' %}"></script>
+        <script src="{% static 'js/Cart.js' %}"></script>
 {% endblock %}
