Ending Assignment with Database Export

--- a/Restaurant/Ad/templates/Ad/Message.html
+++ b/Restaurant/Ad/templates/Ad/Message.html
@@ -25,7 +25,7 @@
                     {{message_filter.form}}
                     <div class="d-flex justify-content-center py-2">
                         <button type="submit" class="btn px-4 py-1 mr-2">Search</button>
-                        <a href="/Ad/ad_order" type="button"  class="btn px-4 py-1" id="UB">Show All</a>
+                        <a href="/Ad/message" type="button"  class="btn px-4 py-1" id="UB">Show All</a>
                     </div>
                 </form>
             </div>
